# calculator

./: pyproject.toml
calculator/: Calculator.py  ExpressionAnalyzer.py  ExpressionParser.py  OldExpressionParser.py  Operation.py  __init__.py  enums.py  exceptions.py  types.py
calculator/types/: AnalyzedExpression.py  Operation.py  __init__.py  aliases.py  enums.py
inline_calculator/: Calculator.py  __init__.py  exceptions.py
tests/: test_Calculator.py  test_ExpressionParser.py  test_OldExpressionParser.py  test_calculator.py
